gitops/config/headlamp/rbac.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: headlamp
  labels:
    app.kubernetes.io/name: headlamp
